app/design/frontend/Shop/hh/web/css/main.less
/* ... */
.product-item-details,
.formula-thumb {
  position: relative;
}

.category-thumb {
  margin-bottom: 15px;
}

.editor-product-img {
  margin-bottom: 20px;
}

.category-thumb:hover .quickview-bar2,
.product-item-details:hover .quickview-bar2,
.formula-thumb:hover .quickview-bar2,
.editor-product-img:hover .quickview-bar2,
.product-img:hover .quickview-bar2 {
  opacity: 1;
}

.limiter-container {
  max-width: 105px;
  float: right;
  margin-left: 60px;
}
.sorter-container {
  max-width: 120px;
  float: left;
  margin-right: 30px;
  .sorter-options {
    color: #000;
    padding-left: 0;
  }
}
.toolbar a.clear {
  color: #8d8d8d;
  font-family: @headlineFont;
  font-size: 13px;
}
.limiter-option {
  width: 40%!important;
  padding-left: 0;
}

.items {
  text-align: center;
  font-family: @headlineFont;
}



/* ==========================================================================
Magic Scroll
========================================================================== */
.MagicScroll > .mcs-button-arrow {
  border-radius: 50%!important;
  background: #a5a5a5!important;
  width: 26px!important;
  height: 26px!important;
}

div.MagicToolboxSelectorsContainer a {
  margin: 0;
}

.MagicScroll > .mcs-button-arrow:hover {
  background-color: #000!important;
}

.MagicScroll-horizontal .mcs-button-arrow-prev:before, .MagicScroll-horizontal .mcs-button-arrow-next:before, .MagicScroll-vertical .mcs-button-arrow-prev:before, .MagicScroll-vertical .mcs-button-arrow-next:before {
  width: 8px!important;
  height: 8px!important;
  border-color: #FFF!important;
  border-width: 2px!important;
}

.active-selector {
  img {
    border: 2px solid #000!important;
  }
}

.mcs-item {
  /*border: 1px solid #d3d3d3;
  border-right: none;*/

  &:last-child {
    border-right: 1px solid #d3d3d3;
  }
}
// div.MagicToolboxSelectorsContainer img {
//   max-height: 125px;
//   min-width: 125px;
// }

.mcs-wrapper {

}

.MagicScroll-horizontal .mcs-button-arrow-next:before{
  left: 45%!important;
}

.MagicScroll-horizontal .mcs-button-arrow-prev:before{
  left: 57%!important;
}


/* ==========================================================================
Social Share
========================================================================== */
.icon-share {
  text-transform: uppercase;
  font-family: @baseFont;
  font-size: 14px;
  padding-left: 0;

  img {
    position: absolute;
  }
}


/* ==========================================================================
Magic Scroll
========================================================================== */
.mfp-iframe-holder .mfp-close {
    top: 10px!important;
    right: 10px!important;
    font-size: 42px!important;
}
.mfp-content {
  min-height: 500px;
  min-width: 500px;
}


.weltpixel-quickview-catalog-product-view {
  .main-content {
    margin-bottom: 50px;
  }
  .description {
    margin-top: 20px;
  }
  .product-add-form {
    .swatch-attribute-label {
      display: block;
    }
  }
  .modal-btns {

  }
  .viewfull-details {
    display: block;
    text-transform: uppercase;
    font-family: @headlineFont;
    margin: 10px auto;
    font-size: 13px;
  }
  .product-info-main .product-options-wrapper .fieldset .swatch-attribute-label {
    width: auto;
    display: block;
  }
  .product-qty {
    display: none;
  }
  .mcs-wrapper {
    display: none!important;
  }
  .add-to-cart {
    margin-bottom: 15px;

    .btn-main {
      width: 100%;
    }
  }
  .swatch-attribute-label {
    font-size: 12px!important;
    font-family: @headlineFont;
    font-weight: normal!important;
    text-transform: uppercase;
  }
  .value {
    margin-top: 0!important;
  }
  .MagicToolboxSelectorsContainer {
    display: none;
  }
  .product.media {
    margin-bottom: 0;
  }
  .quickview-qty,
  .product-editors-pick,
  .product-shop-the-shot,
  .product-editors-pick-quote {
    display: none;
  }

}


.product-info-main .product-options-wrapper .fieldset .swatch-option.text.selected {
  background-color: #4c4c4c!important;
  color: #FFF;
}




#review-form {
  .review-field-text {
    label {
      font-family: @fancyFont!important;
      font-style: italic!important;
      font-size: 18px!important;
    }
  }
  textarea {
    margin-top: 5px;
  }
}


.review-control-vote label:before {
  color: #020202!important;
}


.btn-no-review {
  display: inline-block;
  &.display-none {
  display: none;
  }
}

.btn-cart-single {
  padding: 10px 35px!important;
}

.product-add-form {
  .btn-cart-single {
    width: 100%;
  }
}

textarea {
  background-color: #f6f6f6;
}

.addthis_toolbox {
  position: relative;
  padding-left: 30px;

  img {
    position: absolute;
    left: 0;
  }
}
.addthis_toolbox a {
  line-height: initial;
  font-size: 13px;
  font-family: @headlineFont;
  text-transform: uppercase;
}



.login-container .social-login-authentication-channel {
  .block-title {
    border: 0;
    margin: 0;
  }
}



.customer-account-login {
  .actions-toolbar .secondary .action span {
    text-transform: uppercase;
    font-size: 12px;
    font-family: @headlineFont;
    &:hover {
      text-decoration: underline;
    }
  }
  .actions-toolbar > .primary:last-child, .actions-toolbar > .secondary:last-child {
    margin-right: 20%;
  }
  .login-container .fieldset:after {
    position: relative;
    top: 20px;
  }
}
/* ... */

